05-creating-and-scheduling-data-pipelines/logs/dag_id=etl/run_id=manual__2024-04-22T10:03:25.434131+00:00/task_id=create_table/attempt=1.log
[2024-04-22T10:03:28.938+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-22T10:03:28.961+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl.create_table manual__2024-04-22T10:03:25.434131+00:00 [queued]>
[2024-04-22T10:03:28.967+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl.create_table manual__2024-04-22T10:03:25.434131+00:00 [queued]>
[2024-04-22T10:03:28.968+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 1
[2024-04-22T10:03:28.981+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): create_table> on 2024-04-22 10:03:25.434131+00:00
[2024-04-22T10:03:28.991+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl', 'create_table', 'manual__2024-04-22T10:03:25.434131+00:00', '--job-id', '19', '--raw', '--subdir', 'DAGS_FOLDER/etl.py', '--cfg-path', '/tmp/tmp9do6smce']
[2024-04-22T10:03:28.993+0000] {standard_task_runner.py:91} INFO - Job 19: Subtask create_table
[2024-04-22T10:03:28.995+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=15491) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-04-22T10:03:28.995+0000] {standard_task_runner.py:63} INFO - Started process 15493 to run task
[2024-04-22T10:03:29.036+0000] {task_command.py:426} INFO - Running <TaskInstance: etl.create_table manual__2024-04-22T10:03:25.434131+00:00 [running]> on host b6fcd665afc9
[2024-04-22T10:03:29.133+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2024-04-22T10:03:25.434131+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-04-22T10:03:25.434131+00:00'
[2024-04-22T10:03:29.135+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-22T10:03:29.140+0000] {base.py:84} INFO - Using connection ID 'my_postgres_conn' for task execution.
[2024-04-22T10:03:29.145+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-22T10:03:29.145+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/etl.py", line 81, in _create_tables
    cur.execute(query)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 4:         VALUES (%s, %s, %s, %s, %s, %s)
                        ^

[2024-04-22T10:03:29.152+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=etl, task_id=create_table, execution_date=20240422T100325, start_date=20240422T100328, end_date=20240422T100329
[2024-04-22T10:03:29.165+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 19 for task create_table (syntax error at or near "%"
LINE 4:         VALUES (%s, %s, %s, %s, %s, %s)
                        ^
; 15493)
[2024-04-22T10:03:29.213+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-22T10:03:29.230+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-22T10:03:29.238+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
